tests/expected_output/subscripted_value_is_not_an_array/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/subscripted_value_is_not_an_array.c:2:16: error: subscripted value is not an array, pointer, or vector
    return argc[0];
           ~~~~^~
dcc explanation: you appear to be incorrectly trying to use argc as an array .
